--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-native-screens": "^2.13.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-transition-group": "^4.4.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
